split viewing parties into invited and hosted

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,22 +5,33 @@
 </section>
 
 <ul id="invited-parties">
-  <h3> Invited Parties </h3>
+  <h3> Parties I am Invited To </h3>
   <% @invited_parties.each do |party| %>
     <%= image_tag "https://image.tmdb.org/t/p/w500#{party.get_image}" %>
     <li><%= link_to "#{party.movie_title}", user_movie_path(party.movie_id) %></li>
-    <li><%= party.date %></li>
-    <li><%= party.time %></li>
+    <li><%= (party.date).strftime("%A, %B %d, %Y") %></li>
+    <li><%= (party.time).strftime("%I:%M%p") %></li>
     <% party.users.each do |user| %>
-      <li><%= user.name %></li>
+      <% if user.id == @user.id %>
+          <li><b><%= user.name %></b></li>
+        <% else %>
+          <li><%= user.name %></li>
       <% end %>
-
+    <% end %>
   <% end %>
 </ul>
 
 <ul id="hosted-parties">
-  <h3> Hosted Parties </h3>
+  <h3> Parties I am Hosting </h3>
   <% @hosted_parties.each do |party| %>
-    <li><%= party.movie_title %></li>
+      <%= image_tag "https://image.tmdb.org/t/p/w500#{party.get_image}" %>
+    <li><%= link_to "#{party.movie_title}", user_movie_path(party.movie_id) %></li>
+    <li><%= (party.date).strftime("%A, %B %d, %Y") %></li>
+    <li><%= (party.time).strftime("%I:%M %p") %></li>
+    <% party.users.each do |user| %>
+      <% if user.id != @user.id %>
+          <li><%= user.name %></li>
+      <% end %>
+    <% end %>
   <% end %>
 </ul>
