--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,8 +1,8 @@
 <%= link_to "Discover Movies", user_dashboard_discover_index_path(@user_movies.user) %>
 <% if @user_movies.type == 'top rated' %>
   <h3>Top Rated Movies</h3>
-<% else %>
-    <h3><%= @user_movies.type == 'search' %></h3>
+<% elsif @user_movies.type == 'search' %>
+    <h3><%= @user_movies.user_name %>'s Dashboard</h3>
 <% end %>
 <table>
   <tr><th>Title</th><th>Rating</th>
