feat/test: User Dashboard Viewing Parties list

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,11 @@
 
 <%= button_to "Discover Movies", user_discover_index_path(@user), method: 'get' %>
 
-<section class='party-list'>
-
+<section class='viewing-parties' style="display:flex;justify-content:space-evenly">
+  <%= "click 'Discover Movies' and start a party!" if @user.parties.empty? %>
+  <% @user.parties.each do |party| %>
+    <div id='party-<%= party.id %>' style="border: 1px solid black;text-align:center;width:350px" >
+      <%= render partial: 'party', locals: { party: party, user: @user} %>
+    </div>
+  <% end %>
 </section>
-
