Change the nested discover user to be user discover index page

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,4 +5,5 @@
 <%= @movie.vote_average %>
 <%= @movie.vote_count %><br>
 
-<%= button_to "Create Viewing Party", "/parties/new", method: :get %>
+<%= button_to "Create Viewing Party", "/parties/new", method: :get %><br>
+<%= button_to "Discover User Page", "/discover/users/#{@user.id}", method: :get %>
