--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @user.name %>'s Movies</h1>
 
 <% @facade.movies.each do |movie| %>
-  <h2><%= link_to movie.title, movie_path(@user, movie) %></h2>
+  <h2><%= link_to movie.title, movie_path(id: @user.id, movie_id: movie.id) %></h2>
   <p>Vote Average: <%= movie.vote_average %></p>
 <% end %>
 
