--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <h2><%= @movie.title %></h2>
 
-<%= button_to "Discover Page", discover_user_path(@user) %>
-<%= button_to "Create a viewing party for #{@movie.title}", new_movie_party_path(id: @user.id, movie_id: @movie.id) %>
+<%= button_to "Discover Page", discover_user_path(@user), method: :get %>
+<%= button_to "Create a viewing party for #{@movie.title}", new_movie_party_path(id: @user.id, movie_id: @movie.id), method: :get %>
 <%= image_tag @movie.image_url, alt: @movie.title %>
 
 <p>Vote: <%= @movie.vote_average %>
