--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Make a Movie Party for <%= @movie.title %></h2>
-<%= button_to "Discover Page", discover_user_path(@host) %>
+<%= button_to "Discover Page", discover_user_path(@host), method: :get %>
 
 <%= form_with model: @party, url: movie_parties_path(@host.id, @movie.id) do |form| %>
   <% if @party.errors.any? %>
@@ -26,7 +26,7 @@
   <%= form.number_field :duration, value: @movie.runtime %>
 
   <%= form.label :datetime, 'When:' %>
-  <%= form.datetime_select :datetime %>
+  <%= form.datetime_select :datetime, default: DateTime.now.tomorrow %>
 
   <%= form.label :users, 'Invite:' %>
   <div id="invitees"><%= form.collection_check_boxes :user_ids, @users, :id, :name %></div>
