--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @user.name %>'s Dashboard</h2>
 
-<%= button_to "Discover Page", discover_user_path(@user) %>
+<%= button_to "Discover Page", discover_user_path(@user), method: :get %>
 
 <div id="parties">
   <h2>My Parties</h2>
