--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,7 +3,6 @@
 <%= @movie.title %>
 <%= @movie.description %>
 <%= @movie.vote_average %>
-<%= @movie.vote_count %><br>
 
-<%= button_to "Create Viewing Party", "/parties/new", method: :get %><br>
-<%= button_to "Discover User Page", "/discover/users/#{@user.id}", method: :get %>
+<%= button_to "Create Viewing Party", new_user_movie_party_path(@user, @movie.id), method: :get %><br>
+<%= button_to "Discover User Page", "/users/#{@user.id}/discover", method: :get %>
