--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,4 +5,4 @@
 <%= @movie.vote_average %>
 
 <%= button_to "Create Viewing Party", new_user_movie_party_path(@user, @movie.id), method: :get %><br>
-<%= button_to "Discover User Page", "/users/#{@user.id}/discover", method: :get %>
+<%= button_to "User Discover Page", "/users/#{@user.id}/discover", method: :get %>
