--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -7,9 +7,13 @@
   <%= form.date_select :day %>
   <%= form.label :time, "Start Time" %>
   <%= form.time_select :time %><br/>
-  <% @users.each do |user|%>
-    <%= label_tag user.id, "#{user.name} (#{user.email})" %>
-    <%= check_box_tag user.id, user.id %><br/>
-  <% end %>
+  <% @users.each do |user| %>
+  <div>
+    <%= check_box_tag "participants[]", user.id, false, id: "#{user.id}" %>
+    <%= label_tag "#{user.id}" do %>
+      <%= user.name %> (<%= user.email %>)
+    <% end %>
+  </div>
+<% end %>
   <%= form.submit "Create Party" %>
 <% end %>
