feat: Add a little css styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <div id="header">
     <%= link_to "Home", root_path %>
+    <div style="text-align: center;" id="header">
     <h1>Viewing Party</h1>
     </div>
     <title>ViewingPartyLite7</title>
