--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,3 +1,4 @@
+<div style="text-align: center;">
 <h2>Discover Movies</h2>
 <div id='find-movies-button'>
   <%= button_to 'Find Top Rated Movies', user_movies_path(@user, {q: "top rated"}), method: :get %>
@@ -5,7 +6,8 @@
 <br>
 <div id='movie-search'>
     <%= form_with url: user_movies_path(@user), local: true, method: :get do |form|%>
-    <%= form.text_field :movie_title %>
+    <%= form.text_field :movie_title, placeholder: "search" %>
     <%= form.submit 'Find Movies' %>
   <% end %>
+</div>
 </div>
