--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
+<div id="new-user-form", style="text-align: center;">
 <h2>Register a New User</h2><br>
-<div id="new-user-form">
   <%= form_with url: register_path, method: :post, local: true do |form| %>
     <%= form.label :name, "Name:" %>
     <%= form.text_field :name %><br><br>
