--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_with model: @party, url: user_movie_viewing_parties_path do |form| %>
   <%= form.label :duration %>
-  <%= form.number_field :duration, min: 1, max: 999, value: @movie.runtime %> min
+  <%= form.number_field :duration, min: @movie.runtime, max: 999, value: @movie.runtime %> min
   <br>
   <%= form.label :date %>
   <%= form.date_field :date, min: Date.today %>
