--- a/app/views/users/movies/viewing_parties/new.html.erb
+++ b/app/views/users/movies/viewing_parties/new.html.erb
@@ -4,20 +4,16 @@
 <br>
 <h2>Create a Movie Party for <%= @facade.movie_title %></h2>
 
-
+<h3>Viewing Party Details</h3>
+  <p>Movie Title: <%= @facade.movie_title %></p>
 <%= form_with url: user_movie_viewing_party_index_path(@user, @facade.movie_id), local: true do |f| %>
   <%= f.label :duration, 'Duration of Party' %>
-  <%= f.number_field :duration, value: @facade.movie_runtime, min: @facade.movie_runtime, max: 300 %>
+  <%= f.number_field :duration, value: @facade.movie_runtime, min: @facade.movie_runtime, max: 300 %><br><br>
   <%= f.label :date, 'Day' %>
-  <%= f.date_field :date %>
+  <%= f.date_field :date %><br><br>
   <%= f.label :start_time %>
-  <%= f.time_field :start_time %>
-  <p>Invite Users</p>
-  <% @users.each do |user| %>
-    <div id="invite_<%= user.id%>">
-    <%= check_box_tag 'invite[]', user.id %>
-    <%= label_tag 'invite[]', user.name %>
-    </div>
-  <% end %>
+  <%= f.time_field :start_time %><br><br>
+  <b><%= f.label :check_boxes, "Invite Users" %></b><br>
+  <%= f.collection_check_boxes :invite, @users, :id, :name %><br>
   <%= f.submit 'Create Party!' %>
-  <% end %>
+<% end %>
