feat: update partial to add display for movie images and titles from API call
Co-authored-by: Thomas Hawley <120520954+thawley2@users.noreply.github.com>

--- a/app/views/shared/_parties.html.erb
+++ b/app/views/shared/_parties.html.erb
@@ -3,8 +3,8 @@
   <p><%= @facade.get_movie_title(party.movie_id)%>
   <p><%= image_tag @facade.get_movie_poster(party.movie_id), size: "60x80" %></p>
 
-  <p><%= party.date %></p>
-  <p><%= party.start_time %></p>
+  <p><%= format_date(party.date) %></p>
+  <p><%= format_time(party.start_time) %></p>
   <p>Host: <%= host=party.host_name %></p>
   <div id='invitees'>
   <p>Invited:</p>
