chore: controllers facades poros

--- a/app/views/users/movies/show.html.erb
+++ b/app/views/users/movies/show.html.erb
@@ -36,6 +36,7 @@
 <div id="movie-reviews">
   <p><h4>Reviews</h4></p>
   <p><%= @reviews.count %> Reviews:<% @reviews.each do |review| %></p>
-    <p><%= @review %></p>
+    <p><%= review %></p>
+    <br>
   <% end %>
 </div>
