all requirements met for new party page

--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -2,7 +2,7 @@
 <h3><%= @movie.title %></h3>
 <%= form_with url: user_movie_parties_path(@user, @movie.id), method: :post, local: true do |form| %>
   <%= form.label :duration, "Duration of Party", value: @movie.runtime %>
-  <%= form.number_field :duration %>
+  <%= form.number_field :duration, value: @movie.runtime %>
   <%= form.label :day, "Day" %>
   <%= form.date_select :day %>
   <%= form.label :time, "Start Time" %>
