--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -3,6 +3,7 @@
 
 <%= button_to 'Discover Top Rated Movies', user_movies_path(@user), method: :get %>
 <br><br>
+<h3>Search Movies By Title</h3>
 <%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
   <%= f.label :q, hidden: true %>
   <%= f.text_field :q %>
