--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,3 +87,9 @@ main {
   font-size: 25px;
   padding-top: 30px;
 }
+
+.card p {
+  text-align: center;
+  font-size: 20px;
+  padding-top: 30px;
+}
