--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,12 +20,16 @@
 <div id="invited">
   <% @user.invited_viewing_parties.each do |user_viewing_party| %>
     <p><%= user_viewing_party.movie_title %> Viewing Party</p>
-    <p>Party Host: <%= user_viewing_party.viewing_party.users.host %></p>
+    <p>Party Host: <%= user_viewing_party.viewing_party.host %></p>
     <p>Date: <%= user_viewing_party.viewing_party.date %></p>
     <p>Time: <%= user_viewing_party.viewing_party.time %></p>
     <p>Users Invited: 
       <% user_viewing_party.viewing_party.users.each do |user| %>
-        <li><%= user.name %> </li>
+        <% if user.id == @user.id %>
+        <li><b><%= user.name %></b> - User</li>
+        <% else %>
+        <li><%= user.name %></li>
+        <%end%>
       <% end %> </p>
   <%end%>
 </div>
