--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,14 +82,14 @@ main {
   height: 450px;
 }
 
-.card h4 {
-  text-align: center;
-  font-size: 25px;
-  padding-top: 30px;
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-.card p {
-  text-align: center;
-  font-size: 20px;
+.card h4, .card p {
+  font-size: 25px;
   padding-top: 30px;
 }
