create a new viewing party, write tests

--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -1,11 +1,11 @@
-<h3>Create a Movie Party for <%= @facade.title %></h3>
+<h3>Create a Movie Party for <%= @facade.movies.title %></h3>
 <%= link_to "Discover Movies", user_dashboard_discover_index_path(@facade.user) %>
 <h3>Viewing Party Details</h3>
-<%= form_with model: @viewing_party, url: user_dashboard_movie_viewing_parties_path(@user, @movie.id), local: true do |form| %>
+<%= form_with model: @viewing_party, url: user_dashboard_movie_viewing_parties_path(@facade.user, @facade.movies.id), action: :create, local: true do |form| %>
+<h4>Movie Title: <%= @facade.movies.title %></h4>
   <div>
     <%= form.label :duration %>
-    <%= form.text_field :duration %>
-  </div>
+    <%= form.text_field :duration,  :value => "#{@facade.movies.runtime}" %>
   <div>
     <%= form.label :date %>
     <%= form.date_field :date %>
@@ -18,7 +18,7 @@
   <div>
   <% @all_users.each do |user|%>
     <%= form.label :"#{user.name} (#{user.email})" %>
-    <%= form.check_box :"#{user.name}" %>
+    <%= form.check_box :"#{user.email}" %>
     <% end %>
   <div>
     <%= form.submit "Create Party" %>
