--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,8 @@
 <h3>
   <% if params[:query].present? %>
     Movie Results for <%= params[:query] %>
+  <% else %>
+    Top Rated Movies
   <% end %>
 </h3>
 <br>
