--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -3,15 +3,24 @@
 <hr>
 <h4>Viewing Party Details</h4>
 <p><b>Movie Title &emsp; &emsp; <%= @movie.title %></b></p>
-<%= form_with url: user_movie_parties_path(@user, @movie), method: :post, local: true do |f| %>
-  <%= f.label :duration, 'Duration of Party:' %>
-  <%= f.number_field :duration %>
+<%= form_with url: user_movie_parties_path(@user, @movie.id), model: @party, method: :post, local: true do |f| %>
+  <%= f.hidden_field :host_id, value: @user.id %>
+  <%= f.label :duration_minutes, 'Duration of Party:' %>
+  <%= f.number_field :duration_minutes %>
   <br>
   <%= f.label :date, 'Day:' %>
   <%= f.date_field :date %>
   <br>
   <%= f.label :start_time, 'Start Time:' %>
   <%= f.time_field :start_time %>
+  <br>
+  <p>Invite Other Users</p>
+  <% @users.reject { |user| user.id == @user.id }.each do |user| %>
+    <div id="user-<%= user.id %>">
+      <%= f.check_box "users[#{user.id}]" %>
+      <%= f.label "users[#{user.id}]", "#{user.name} (#{user.email})" %>
+    </div>
+  <% end %>
   <br>
   <%= f.submit 'Create Party' %>
 <% end %>
