--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
   <% @user.invited_viewing_parties.each do |user_viewing_party| %>
     <p><%= user_viewing_party.movie_title %> Viewing Party</p>
     <p><%= image_tag "http://image.tmdb.org/t/p/w500#{user_viewing_party.movie_image}" %></p>
-    <p>Party Host: <%= user_viewing_party.viewing_party.users.host %></p>
+    <p>Party Host: <%= user_viewing_party.viewing_party.host %></p>
     <p>Date: <%= user_viewing_party.viewing_party.date %></p>
     <p>Time: <%= user_viewing_party.viewing_party.time %></p>
     <p>Users Invited: 
