--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -12,13 +12,13 @@
   </div>
   <div>
     <%= form.label :time %>
-    <%= form.time_field :time %>
+    <%= form.time_field :start_time %>
   </div>
   <h4>Invite Other Users</h4>
   <div>
   <% @all_users.each do |user|%>
     <%= form.label :"#{user.name} (#{user.email})" %>
-    <%= form.check_box :"#{user.email}" %>
+    <%= form.check_box :"user_ids[#{user.id}]" %>
     <% end %>
   <div>
     <%= form.submit "Create Party" %>
