Final touchups for project

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h3>Register a New User</h3>
+<%= form_with url: register_path, model: @user do |f| %>
     <%= f.label :name, 'Name:'  %><br>
     <%= f.text_field :name %>
     <br>
