fix movie results page link

--- a/app/views/movie/results.html.erb
+++ b/app/views/movie/results.html.erb
@@ -1,6 +1,6 @@
 <% @movies.each do |m| %>
   <div id="movie-#{m.title}">
-  <%= link_to "#{m.title}", movie_path(@user, m) %>
+  <%= link_to "#{m.title}", movie_path(@user.id, m.id) %>
   <%= m.vote_average %>
   </div>
   <br>
