--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= link_to 'Home', root_path %>
-    <h1>Viewing Party</h1>
+    <h1 align="center">Viewing Party</h1>
 
     <% flash.each do |type, msg| %>
       <div>
