feat: complete Authentication Challenge User Story 1

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,5 +7,11 @@
   <%= f.label :email, "E-mail Address:" %>
   <%= f.text_field :email %>
 
+  <%= f.label :password, "Password:" %>
+  <%= f.text_field :password %>
+
+  <%= f.label :password_confirmation, "Password Confirmation:" %>
+  <%= f.text_field :password_confirmation %>
+
   <%= f.submit "Register" %>
 <% end %>
