complete Authentication Challenge - User Story 3 (Log In Happy Path)

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Viewing Party</h1>
 
+<%= link_to 'Log In', login_form_path, method: :get %>
 <%= button_to 'Create a New User', new_user_path, method: :get %>
 
 
