Go fix main branch from accidental merge from partner

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,6 @@
 <div id="new-user">
   <%= link_to "Create User", register_path, method: :get, local: true %>
+  <%= link_to "Log In", login_path %>
 </div>
 
 <div id="existing-users">
