--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,5 +5,9 @@
   <%= form.text_field :user_name %><br>
   <%= form.label :email %>
   <%= form.text_field :email %><br>
+  <%= form.label :password %>
+  <%= form.text_field :password %><br>
+  <%= form.label :password_confirmation %>
+  <%= form.text_field :password_confirmation %>
   <%= form.submit "Create New User" %>
 <% end %>
