--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Viewing Party</h1>
 
 <% if current_user %>
-  <%= link_to 'Log Out' %>
+  <%= link_to 'Log Out', logout_path, method: :get %>
 <% else %>
   <%= link_to 'Log In', login_form_path, method: :get %>
   <%= button_to 'Create a New User', new_user_path, method: :get %>
