--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,10 +8,10 @@
   <%= f.text_field :email %>
 
   <%= f.label :password, "Password:" %>
-  <%= f.text_field :password %>
+  <%= f.password_field :password %>
 
   <%= f.label :password_confirmation, "Password Confirmation:" %>
-  <%= f.text_field :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
 
   <%= f.submit "Register" %>
 <% end %>
