--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,5 +4,9 @@
   <%= form.text_field :name %><br>
   <%= form.label :email, 'Email' %>
   <%= form.text_field :email %><br>
+  <%= form.label :password, 'Password:' %>
+  <%= form.password_field :password %><br> 
+  <%= form.label :password_confirmation, 'Password Confirmation:' %>
+  <%= form.password_field :password_confirmation %><br> 
   <%= form.submit 'Create New User' %>
 <% end %>
