--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <%= render "shared/header" %>
     <main>
       <%= render "shared/messages" %>
+        <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, class: name %>
+    <% end %>
       <%= yield %>
     </main>
   </body>
