--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,8 @@
-<%= form_with model: @user, url: new_user_path, method: :get, local: true do |form| %>
+<%= form_with model: @user, url: register_path, method: :get, local: true do |form| %>
   <%= form.button "Create New User" %>
 <% end %>
 <h2>Existing Users</h2>
 <% @users.each do |user|%>
 <%= link_to "#{user.email}", user_dashboard_path(user) %><br>
 <% end %>
+<%= link_to "Log In", login_path %>
