--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,16 @@
 <h3>Register a New User</h3>
-<%= form_with url: register_path, model: @user do |f| %>
-    <%= f.label :name, 'Name:'  %><br>
+<%= form_with url: register_path, method: :post do |f| %>
+    <%= f.label :name, 'Username:'  %><br>
     <%= f.text_field :name %>
     <br>
     <%= f.label :email, 'Email:' %>
-    <%= f.email_field :email %>
+    <%= f.text_field :email %>
     <br>
-    <%= f.submit 'Create New User' %>
+    <%= f.label :password, 'Password:' %>
+    <%= f.text_field :password %>
+    <br>
+    <%= f.label :password_confirmation, 'Password Confirmation:' %>
+    <%= f.text_field :password_confirmation %>
+    <br>
+    <%= f.submit 'Create User' %>
 <% end %>
