--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,12 @@
+<% if current_user %>
+  <%= link_to "Log Out" %>
+<% else %>
+<%= link_to "Log In", login_path %>
 <%= form_with model: @user, url: register_path, method: :get, local: true do |form| %>
   <%= form.button "Create New User" %>
+  <% end %>
 <% end %>
 <h2>Existing Users</h2>
 <% @users.each do |user|%>
 <%= link_to "#{user.email}", user_dashboard_path(user) %><br>
 <% end %>
-<%= link_to "Log In", login_path %>
