--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,7 +1,11 @@
-<div id="new-user">
-  <%= link_to "Create User", register_path, method: :get, local: true %>
-  <%= link_to "Log In", login_path %>
-</div>
+<% if current_user %>
+  <%= link_to "Log Out" %>
+<% else %>
+  <div id="new-user">
+    <%= link_to "Create User", register_path, method: :get, local: true %>
+    <%= link_to "Log In", login_path %>
+  </div>
+<% end %>
 
 <div id="existing-users">
   <h2>Existing Users</h2>
