--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,17 +1,16 @@
 <% if current_user %>
   <%= link_to "Log Out", logout_path %>
+  <div id="existing-users">
+    <h2>Existing Users</h2>
+    <% @users.each do |user| %>
+      <ul>
+        <li><%= user.email %></li>
+      </ul>
+    <% end %>
+  </div>
 <% else %>
   <div id="new-user">
     <%= link_to "Create User", register_path, method: :get, local: true %>
     <%= link_to "Log In", login_path %>
   </div>
 <% end %>
-
-<div id="existing-users">
-  <h2>Existing Users</h2>
-  <% @users.each do |user| %>
-    <ul>
-      <li><%= link_to user.email, user_path(user) %></li>
-    </ul>
-  <% end %>
-</div>
