--- a/app/views/movie/show.html.erb
+++ b/app/views/movie/show.html.erb
@@ -2,7 +2,7 @@
 
 <section id="buttons">
   <div id="discover">
-    <%= button_to 'Discover Page', movie_index_path(@user), method: :get %>
+    <%= button_to 'Discover Movies', movie_index_path(@user), method: :get %>
   </div>
   <br>
   <div id="new_party">
@@ -12,7 +12,7 @@
   <br>
 <section id="general_info">
   <div id="movie_details">
-    <p>Runtime: <%= @movie.runtime %> minutes</p>
+    <p>Runtime: <%= @movie.format_runtime %></p>
     <p>Vote Average: <%= @movie.vote_average %></p>
     <p>Genres: <%= @movie.genres %></p>
     <p>Summary: <%= @movie.summary %></p>
