movie show page

--- a/app/views/movie/show.html.erb
+++ b/app/views/movie/show.html.erb
@@ -14,7 +14,7 @@
   <div id="movie_details">
     <p>Runtime: <%= @movie.format_runtime %></p>
     <p>Vote Average: <%= @movie.vote_average %></p>
-    <p>Genres: <%= @movie.genres %></p>
+    <p>Genres: <%= @movie.format_genres %></p>
     <p>Summary: <%= @movie.summary %></p>
   </div>
   <div id="cast_characters">
