--- a/app/views/movie/show.html.erb
+++ b/app/views/movie/show.html.erb
@@ -16,6 +16,12 @@
     <p>Vote Average: <%= @movie.vote_average %></p>
     <p>Genres: <%= @movie.format_genres %></p>
     <p>Summary: <%= @movie.summary %></p>
+  <p>Review Count: <%= @facade.reviews_count %></p>
+    <% @facade.reviews.each do |review| %>
+  <p>Author: <%= review.author %></p>
+  <p>Review: <%= review.content %></p>
+  <br>
+<% end %>
   </div>
   <div id="cast_characters">
     <h2>Cast:</h2>
