--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Viewing Party</h1>
 
 <% if current_user %>
-  <%= link_to 'Log Out', session_path, method: :delete %>
+  <%= button_to 'Log Out', session_path(current_user), method: :delete %>
 <% else %>
-  <%= link_to 'Log In', new_session_path, method: :get %>
+  <%= button_to 'Log In', new_session_path, method: :get %>
   <%= button_to 'Create a New User', new_user_path, method: :get %>
 <% end %>
 
