--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,8 +1,8 @@
 <h3>Discover Movies</h3>
 
-<%= button_to "Find Top Rated Movies", user_movies_path(@user), method: :get, params: { q: 'top rated' } %>
+<%= button_to "Find Top Rated Movies", movies_path, method: :get, params: { q: 'top rated' } %>
 
-<%= form_with url: user_movies_path(@user), method: :get do |form| %>
+<%= form_with url: movies_path, method: :get do |form| %>
   <%= form.search_field :q %>
   <%= form.submit "Find Movies" %>
 <% end %>
