--- a/app/views/users/movies/viewing_parties/new.html.erb
+++ b/app/views/users/movies/viewing_parties/new.html.erb
@@ -1,11 +1,11 @@
 <h3>Create a Movie Party for <%= @movie.title %></h3>
 
-<%= button_to "Discover Page", user_discover_index_path(@user), method: 'get' %>
+<%= button_to "Discover Page", discover_index_path, method: 'get' %>
 
 <div class="new-party-form">
   <h4>Viewing Party Details</h4>
   <p>Movie Title: <%= @movie.title %></p>
-  <%= form_with url: user_movie_viewing_parties_path(@user, @movie.id), method: :post, local: true do |form| %>
+  <%= form_with url: movie_viewing_parties_path(@movie.id), method: :post, local: true do |form| %>
     <%= form.label "Duration of party" %>
     <%= form.number_field :duration %>
     <br>
