update routes to use dashboard to replace users/:id, then fix all places that call on old routes... still a work in progress

--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,6 +1,6 @@
 <h3>Discover Movies</h3>
-<%= link_to "Top Rated Movies", "/users/#{@user.id}/movies?q=top%20rated", method: :get %>
-<%= form_with url: "/users/#{@user.id}/movies?q=#{@search}", method: :get, local: true do |form| %>
+<%= link_to "Top Rated Movies", "/dashboard/movies?q=top%20rated", method: :get %>
+<%= form_with url: "/dashboard/movies?q=#{@search}", method: :get, local: true do |form| %>
   <%= form.search_field :q, placeholder: "Search" %>
   <%= form.submit "Find Movies" %>
 <% end %>
