--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,7 +8,7 @@
   <tr><th>Title</th><th>Rating</th>
   <% @facade.movies.each do |movie| %>
     <tr>
-      <td><%= link_to "#{movie.title}", user_dashboard_movie_path(@facade.user, movie.id) %></td>
+      <td><%= link_to "#{movie.title}", dashboard_movies_path(movie.id) %></td>
       <td><%= movie.rating %></td>
     </tr>
   <% end %>
