--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h3><%= @facade.user_name %>'s Dashboard</h3>
-<%= form_with url: user_dashboard_discover_index_path(@facade.user), method: :get , local: true do |form| %>
+<%= form_with url: dashboard_discover_path, method: :get , local: true do |form| %>
   <%= form.submit 'Discover Movies' %>
 <% end %>
 
