--- a/app/views/shared/_discover.html.erb
+++ b/app/views/shared/_discover.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Discover Movies", user_dashboard_discover_index_path(@facade.user) %>
+<%= link_to "Discover Movies", dashboard_discover_path %>
