--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <% if current_user %>
   <%= button_to "Log Out", logout_path, method: :delete %>
+  <%= link_to "Dashboard", dashboard_path %>
    <h2>Existing Users</h2> 
     <% @users.each do |user|%>
       <%= user.email %><br>
