fix views for routes, add dashboard link

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,13 +2,14 @@
 <% if @facade.type == :top_rated %>
   <h3>Top Rated Movies</h3>
 <% elsif @facade.type == :search %>
+<%# binding.pry %>
     <h3><%= @facade.user_name %>'s Dashboard</h3>
 <% end %>
 <table>
   <tr><th>Title</th><th>Rating</th>
   <% @facade.movies.each do |movie| %>
     <tr>
-      <td><%= link_to "#{movie.title}", dashboard_movies_path(movie.id) %></td>
+      <td><%= link_to "#{movie.title}", "/dashboard/movies/#{movie.id}" %></td>
       <td><%= movie.rating %></td>
     </tr>
   <% end %>
